--- a/contact.html
+++ b/contact.html
@@ -2,16 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chua Website</title>
-    <script
-      type="text/javascript"
-      src="https://cdn.emailjs.com/sdk/2.3.2/email.min.js"
-    ></script>
-    <link
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
+    <script type="text/javascript" src="https://cdn.emailjs.com/sdk/2.3.2/email.min.js"></script>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet" />
     <style>
       * {
         margin: 0;
@@ -47,13 +42,6 @@
         z-index: 100;
       }
 
-      header nav {
-        display: flex;
-        gap: 10px;
-        color: white;
-        text-decoration: none;
-      }
-
       .navigation a {
         font-size: 1.1em;
         color: white;
@@ -63,15 +51,7 @@
         transition: 0.3s;
       }
 
-      h2 {
-        font-size: 2em;
-      }
-
       .navigation a:hover {
-        color: aqua;
-      }
-
-      h2 span {
         color: aqua;
       }
 
@@ -82,7 +62,6 @@
         width: 400px;
         max-width: 90%;
         text-align: center;
-        padding-bottom: 50px;
         background: rgba(255, 255, 255, 0.8);
       }
 
@@ -115,7 +94,6 @@
         color: white;
         padding: 12px 20px;
         border: none;
-        box-shadow: 0 2px 20px rgba(0, 0, 0, 0.3);
         cursor: pointer;
         width: 100%;
         opacity: 0.9;
@@ -146,50 +124,22 @@
       <form id="contact-form">
         <div class="form-group">
           <label for="name">Name:</label>
-          <input
-            type="text"
-            class="form-control"
-            id="name"
-            name="name"
-            placeholder="Enter your name"
-          />
+          <input type="text" class="form-control" id="name" name="name" placeholder="Enter your name" required />
         </div>
         <div class="form-group">
           <label for="email">Email:</label>
-          <input
-            type="email"
-            class="form-control"
-            id="email"
-            name="email"
-            placeholder="Enter your email"
-          />
+          <input type="email" class="form-control" id="email" name="email" placeholder="Enter your email" required />
         </div>
         <div class="form-group">
           <label for="subject">Subject:</label>
-          <input
-            type="text"
-            class="form-control"
-            id="subject"
-            name="subject"
-            placeholder="Enter subject"
-          />
+          <input type="text" class="form-control" id="subject" name="subject" placeholder="Enter subject" required />
         </div>
         <div class="form-group">
           <label for="message">Message:</label>
-          <textarea
-            class="form-control"
-            id="message"
-            name="message"
-            rows="5"
-            placeholder="Write your message here"
-          ></textarea>
+          <textarea class="form-control" id="message" name="message" rows="5" placeholder="Write your message here" required></textarea>
         </div>
         <button type="submit" class="btn btn-primary">Send Message</button>
-        <div
-          id="spinner"
-          class="spinner-border text-primary ml-2"
-          role="status"
-        >
+        <div id="spinner" class="spinner-border text-primary ml-2" role="status">
           <span class="sr-only">Loading...</span>
         </div>
       </form>
@@ -198,18 +148,19 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script>
-      document
-        .getElementById("contact-form")
-        .addEventListener("submit", function (event) {
-          event.preventDefault();
-          document.getElementById("spinner").style.display = "inline-block";
+      document.addEventListener("DOMContentLoaded", function() {
+        document
+          .getElementById("contact-form")
+          .addEventListener("submit", function (event) {
+            event.preventDefault();
+            document.getElementById("spinner").style.display = "inline-block";
 
-          setTimeout(() => {
-            document.getElementById("spinner").style.display = "none";
-            alert("Form submitted successfully!");
-          }, 2000);
-        });
+            setTimeout(() => {
+              document.getElementById("spinner").style.display = "none";
+              alert("Form submitted successfully!");
+            }, 2000);
+          });
+      });
     </script>
-    <script src="app.js"></script>
   </body>
 </html>
