--- a/contact.html
+++ b/contact.html
@@ -116,7 +116,7 @@
       <h2 class="logo"><span>C</span>hua</h2>
       <nav class="navigation">
         <a href="index.html">Home</a>
-        <a href="Contact.html">Contact</a>
+        <a href="contact.html">Contact</a>
       </nav>
     </header>
     <div class="container mt-5 border border-primary rounded">
