--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
       <h2 class="logo"><span>C</span>hua</h2>
       <nav class="navigation">
         <a href="index.html">Home</a>
-        <a href="Contact.html">Contact</a>
+        <a href="contact.html">Contacts</a>
+        <a href="about.html">About</a>
       </nav>
       <a href="#" class="btn-talk">Let's Talk</a>
     </header>
