--- a/contact.html
+++ b/contact.html
@@ -66,10 +66,18 @@
       }
 
       h2 {
-        color: #ffffff;
+        color: aqua;
         margin-bottom: 10px;
       }
 
+      h2.logo {
+        color: white;
+      }
+
+      .logo span {
+      color: aqua;
+      }
+      
       label {
         color: white;
       }
@@ -113,10 +121,11 @@
   </head>
   <body>
     <header>
-      <h2 class="logo"><span>C</span>hua</h2>
+      <h2 class="logo"><span>C</span>ontact Us</h2>
       <nav class="navigation">
         <a href="index.html">Home</a>
         <a href="contact.html">Contact</a>
+        <a href="about.html">About</a>
       </nav>
     </header>
     <div class="container mt-5 border border-primary rounded">
