--- a/index.html
+++ b/index.html
@@ -1,49 +1,133 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <link rel="icon" href="logo.png" type="image/x-icon" />
-  </head>
-
-  <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Chua Website</title>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
-    />
-    <link rel="stylesheet" href="style.css" />
-  </head>
+    <title>Chua Portfolio</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" />
 
-  <body>
-    <header>
-      <h2 class="logo"><span>C</span>hua</h2>
-      <nav class="navigation">
-        <a href="index.html">Home</a>
-        <a href="contact.html">Contacts</a>
-        <a href="about.html">About</a>
-      </nav>
-      <a href="#" class="btn-talk">Let's Talk</a>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: 'Calibri', sans-serif;
+        }
+
+        body {
+            background-color: #585858;
+            color: white;
+            background-image: url("background.jpg");
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-position: center;
+        }
+
+        header {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            padding: 20px 100px;
+            background-color: rgba(0, 0, 0, 0.7);
+            z-index: 100;
+        }
+
+        .logo {
+            font-size: 2em;
+            color: white;
+            font-weight: bold;
+        }
+
+        .logo span {
+            color: var(--bs-info);
+        }
+
+        .home {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 0 100px;
+            min-height: 100vh;
+            text-align: left;
+            margin-top: 80px;
+        }
+
+        .content h2 {
+            font-size: 2.5em;
+        }
+
+        .content h2 span {
+            color: var(--bs-info);
+        }
+
+        .content h4 {
+            font-size: 1.5em;
+            font-weight: bold;
+            margin-top: 10px;
+        }
+
+        .content p {
+            padding: 10px 0 20px;
+            font-size: 1.1em;
+        }
+
+        .social-icons {
+            display: flex;
+            gap: 10px;
+            margin-top: 15px;
+        }
+
+        .social-icons a {
+            display: inline-block;
+            width: 35px;
+            height: 35px;
+            background: var(--bs-info);
+            border-radius: 50%;
+            text-align: center;
+            line-height: 35px;
+            color: white;
+            transition: .3s;
+        }
+
+        .social-icons a:hover {
+            background: var(--bs-light);
+            color: var(--bs-info);
+        }
+    </style>
+</head>
+
+<body>
+    <header class="d-flex justify-content-between align-items-center px-5">
+        <h2 class="logo"><span>C</span>hua</h2>
+        <nav class="navigation d-flex">
+            <a href="index.html" class="text-white me-3">Home</a>
+            <a href="contact.html" class="text-white me-3">Contacts</a>
+            <a href="about.html" class="text-white me-3">About</a>
+        </nav>
+        <a href="#" class="btn btn-info text-white fw-bold">Let's Talk</a>
     </header>
 
     <section class="home">
-      <div class="content">
-        <h2>Hi, I'm <span>Janno Chua</span></h2>
-        <h4>BSIT - 2ND YEAR</h4>
-        <p>
-          This is my Website, I hope you like my work. Thank you for visiting!
-        </p>
-        <div class="btn-group">
-          <a href="#">Click Here</a>
-          <a href="#">See Projects</a>
+        <div class="content">
+            <h2>Hi, Welcome to my <span>Portfolio!</span></h2>
+            <h4>Are you ready to witness such creativity?</h4>
+            <p>Click the "See Projects" to view all my works.</p>
+            <div class="btn-group mt-3">
+                <a href="#" class="btn btn-info text-white">Click Here</a>
+                <a href="#" class="btn btn-outline-info">See Projects</a>
+            </div>
+            <div class="social-icons mt-2">
+                <a href="https://www.facebook.com/jannochristiann" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+                <a href="https://www.instagram.com/jannochristian" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                <a href="mailto:jannochristian@gmail.com" target="_blank"><i class="fa-brands fa-google"></i></a>
+            </div>
         </div>
-        <div class="social-icons">
-          <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
-          <a href="#"><i class="fa-brands fa-square-facebook"></i></a>
-          <a href="#"><i class="fa-brands fa-instagram"></i></a>
-        </div>
-      </div>
     </section>
-  </body>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
+</body>
 </html>
