--- a/about.html
+++ b/about.html
@@ -1,52 +1,186 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <link rel="icon" href="logo.png" type="image/x-icon" />
-  </head>
+<head>
+  <link rel="icon" href="logo.png" type="image/x-icon" />
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Chua's Portfolio Website</title>
 
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Chua's Portfolio Website</title>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
-    />
-    <link rel="stylesheet" href="style.css" />
-  </head>
+  <!-- Bootstrap CSS -->
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+  />
+  <link
+    href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css"
+    rel="stylesheet"
+  />
+  
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: 'Calibri', sans-serif;
+    }
 
-  <body>
-    <header>
-      <h2 class="logo"><span>A</span>bout Me</h2>
-      <nav class="navigation">
-        <a href="index.html">Home</a>
-        <a href="contact.html">Contacts</a>
-        <a href="about.html">About</a>
-      </nav>
-      <a href="#" class="btn-talk">Let's Talk</a>
-    </header>
+    header {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      padding: 20px 100px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      z-index: 100;
+      background-color: #333;
+    }
 
-    <section class="home">
-      <div class="content">
-        <h2>I am a 1st year student at <span>St. Peter's College</span></h2>
-        <h4>Bachelor of Science in Information Technology (BSIT)</h4>
-        <p>
-          The Bachelor of Science in Information Technology (BSIT) is a
-          three-year program that prepares students to be IT professionals
-          well-versed on IT applications, including web, database, programming,
-          and networking technologies.
-        </p>
-        <div class="btn-group">
-          <a href="#">Read More</a>
-          <a href="#">See Projects</a>
-        </div>
-        <div class="social-icons">
-          <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
-          <a href="#"><i class="fa-brands fa-square-facebook"></i></a>
-          <a href="#"><i class="fa-brands fa-instagram"></i></a>
-        </div>
+    .logo {
+      font-size: 2em;
+      color: white;
+    }
+
+    .logo span {
+      color: aqua;
+    }
+
+    .navigation a {
+      font-size: 1.1em;
+      color: white;
+      text-decoration: none;
+      margin-right: 40px;
+      font-weight: 500;
+      transition: .3s;
+    }
+
+    .navigation a:hover {
+      color: aqua;
+    }
+
+    .btn-talk {
+      color: white;
+      text-decoration: none;
+      padding: 8px 20px;
+      background: aqua;
+      border-radius: 10px;
+      font-weight: 500;
+      border: 2px solid aqua;
+      transition: .3s;
+    }
+
+    .btn-talk:hover {
+      color: aqua;
+      background: transparent;
+    }
+
+    .home {
+      position: relative;
+      width: 100%;
+      height: 100vh;
+      background: url('background.jpg') no-repeat center center/cover;
+      display: flex;
+      align-items: center;
+      padding: 30px 100px;
+      color: white;
+    }
+
+    .content h2 {
+      font-size: 3em;
+    }
+
+    .content h2 span {
+      color: aqua;
+    }
+
+    .content h4 {
+      font-size: 1.5em;
+    }
+
+    .content p {
+      padding: 10px 0 20px 0;
+    }
+
+    .btn-group a {
+      color: white;
+      text-decoration: none;
+      padding: 10px 30px;
+      background: aqua;
+      border-radius: 10px;
+      font-weight: 500;
+      margin-right: 10px;
+    }
+
+    .btn-group a:nth-child(2) {
+      color: aqua;
+      background: transparent;
+      border: 2px solid aqua;
+    }
+
+    .btn-group a:hover {
+      color: white;
+      background: aqua;
+    }
+
+    .social-icons {
+      display: flex;
+      gap: 20px;
+      margin-top: 20px;
+    }
+
+    .social-icons a {
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+      width: 35px;
+      height: 35px;
+      background: aqua;
+      border-radius: 50%;
+      color: white;
+      text-decoration: none;
+      font-size: 1.2em;
+    }
+
+    .social-icons a:hover {
+      background-color: white;
+      color: aqua;
+    }
+  </style>
+</head>
+
+<body>
+  <header class="d-flex justify-content-between align-items-center">
+    <h2 class="logo"><span>A</span>bout Me</h2>
+    <nav class="navigation d-flex">
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="contact.html">Contacts</a>
+    </nav>
+    <a href="#" class="btn-talk">Let's Talk</a>
+  </header>
+
+  <section class="home d-flex align-items-center">
+    <div class="content text-start">
+      <h2>I am a 1st year student at <span>St. Peter's College</span></h2>
+      <h4>Bachelor of Science in Information Technology (BSIT)</h4>
+      <p>
+        The Bachelor of Science in Information Technology (BSIT) is a three-year program that prepares students to be IT professionals well-versed in IT applications, including web, database, programming, and networking technologies.
+      </p>
+      <div class="btn-group">
+        <a href="#" class="btn btn-primary">Read More</a>
+        <a href="#" class="btn btn-outline-primary">See Projects</a>
       </div>
-    </section>
-  </body>
+      <div class="social-icons mt-4">
+        <a href="https://www.linkedin.com" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
+        <a href="https://www.facebook.com/YOUR_PROFILE" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+        <a href="https://www.instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+      </div>
+    </div>
+  </section>
+
+  <!-- Bootstrap JS -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
+</body>
 </html>
